# prime-pack-abdulkarim

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
prime_pack_abdulkarim/: __init__.py  __main__.py
prime_pack_abdulkarim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_basic.py
